<resources>
    <string name="app_name">Fiap Games</string>
    <string name="user_erro">Error in searching for user!</string>
    <string name="user_add">User included</string>
    <string name="user_exists">User already exists!</string>
    <string name="login_activity">Login</string>
    <string name="usuario">Login</string>
    <string name="senha">Password</string>
    <string name="login">Login</string>
    <string name="manter_conectado">Keep connected</string>
    <string name="usuario_nao_existe">Incorrect user or password</string>
    <string name="bem_vindo">Welcome!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sair">Exit</string>
    <string name="cadastrar">Add</string>
    <string name="nome_cliente">Client name</string>
    <string name="telefone_cliente">Phone</string>
    <string name="cpf_cliente">CPF</string>
    <string name="cpf_nota">CPF In the invoice</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="produto">Product</string>
    <string name="finalizar">finish</string>
    <string name="pedido_ok">Order inserted successfully!</string>
    <string name="pedido_nok">Error inserting request!</string>
    <string name="texto_sem_pedido">No orders</string>
    <string name="excluir">Delete</string>
    <string name="alterar">Change</string>
    <string name="excluido_ok">Request deleted successfully</string>
    <string name="excluido_nok">Error while trying to delete</string>
    <string name="id">Id</string>
    <string name="pedido_alterado">Successfully changed order</string>
    <string name="sobre">About</string>
    <string name="about_dialog_text">
<![CDATA[
<b>App FIAP Games</b><br>
Developer: Eduardo Araújo<br>
Version: %s<br><br>
]]>
	</string>
    <string name="about_dialog_title">Fiap Games</string>
    <string name="ok">OK</string>
    <string name="NA">N/A</string>
</resources>
